--- a/README
+++ b/README
@@ -73,4 +73,4 @@ By Iwan Gabovitch <qubodup@gmail.com>:
 textures/grass.tga
 textures/sand.tga
 sounds/heart.wav
-sounds/boom.wav
+sounds/explosion.wav
