Added Copyright for music to README. Some small bugfixes.

--- a/README
+++ b/README
@@ -63,6 +63,13 @@ textures/pony.png
 textures/pony-blue.png (modified by qubodup)
 
 * Following files are available under terms of the Creative Commons
+  Attribution-Share Alike 3.0 license (see 
+  <http://creativecommons.org/licenses/by-sa/3.0/>):
+
+Copyright (C) renich <http://www.jamendo.com/en/artist/Renich>:
+music/To be happy.mp3 (reencoded by ginkgo)
+
+* Following files are available under terms of the Creative Commons
   Attribution 3.0 license (see docs/CCBY3 or
   <http://creativecommons.org/licenses/by/3.0/>):
 
