Added TextArea widget.

--- a/README
+++ b/README
@@ -76,8 +76,15 @@ music/To be happy.mp3 (reencoded by ginkgo)
 Copyright (C) brisingre <http://brisingre.deviantart.com/>:
 textures/sky.tga (modified by Iwan Gabovitch)
 
+* Following files are released under the terms of the Open Font License (OFL)
+  <http://scripts.sil.org/OFL>
+
+Copyright (C) David Brisbane <http://openfontlibrary.org/media/people/DaveDS>:
+fonts/DaveDS_-_Sketchy.ttf
+
 * Following files are released into the public domain or if you prefer,
   licensed under cc0 <http://creativecommons.org/publicdomain/zero/1.0/>:
+
 
 By Iwan Gabovitch <qubodup@gmail.com>:
 textures/grass.tga
