alpha no more\!

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Pink Pony is super pre-alpha, so don't expect too much. :)
+Pink Pony is kind of beta, so don't expect *too* much. :)
 
 == COMPILING ==
 
